--- a/.drone.yml
+++ b/.drone.yml
@@ -7,17 +7,15 @@ env:
   - npmdeployusername={{npmdeployusername}}
   - npmdeploypassword={{npmdeploypassword}}
   - email={{email}}
-  - hipchatToken={{hipchatToken}}
 notify:
   email:
     recipients:
       - drone@clever.com
-  hipchat:
-    room: Clever-Dev-CI
-    token: {{hipchatToken}}
-    on_started: true
-    on_success: true
+  slack:
     on_failure: true
+    on_started: false
+    on_success: false
+    webhook_url: $$slack_webhook 
 publish:
   npm:
     email: {{email}}
