--- a/.drone.yml
+++ b/.drone.yml
@@ -1,25 +1,26 @@
-image: node0.10
-script:
-  - ./test_drone.sh
-  - nvm install 0.10.29
-  - nvm use 0.10.29
 env:
-  - npmdeployusername={{npmdeployusername}}
-  - npmdeploypassword={{npmdeploypassword}}
-  - email={{email}}
+- npmdeployusername=$$npmdeployusername
+- npmdeploypassword=$$npmdeploypassword
+- email=$$email
+image: node0.10
 notify:
   email:
     recipients:
-      - drone@clever.com
+    - drone@clever.com
   slack:
     on_failure: true
     on_started: false
     on_success: false
-    webhook_url: $$slack_webhook 
+    webhook_url: $$slack_webhook
 publish:
   npm:
-    email: {{email}}
-    username: {{npmdeployusername}}
-    password: {{npmdeploypassword}}
-    branch: master
-    registry: "https://clever.registry.nodejitsu.com"
+    email: $$email
+    password: $$npmdeploypassword
+    registry: https://clever.registry.nodejitsu.com
+    username: $$npmdeployusername
+    when:
+      branch: master
+script:
+- ./test_drone.sh
+- nvm install 0.10.29
+- nvm use 0.10.29
