--- a/.drone.yml
+++ b/.drone.yml
@@ -10,14 +10,17 @@ notify:
     webhook_url: $$slack_webhook
 publish:
   npm:
-    email: $$email
-    password: $$npmdeploypassword
-    username: $$npmdeployusername
+    email: $$npm_drone_email
+    password: $$npm_drone_password
+    registry: https://registry.npmjs.org
+    username: $$npm_drone_username
     when:
       branch: master
 script:
-  - npm config set ca ""
-  - npm install
-  - nvm install 0.10.29
-  - nvm use 0.10.29
-  - make test
+- nvm install 0.10.29
+- npm install npm@2.7.0 -g
+- npm config set ca ""
+- npm install
+- make test
+- ./publish_nodejitsu.sh
+
