--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,4 @@
-image: node0.10
+image: clever/drone-node:6.2.2
 notify:
   email:
     recipients:
@@ -16,9 +16,6 @@ publish:
     when:
       branch: master
 script:
-- npm config set ca ""
 - npm install
 - npm test
-- nvm install 0.10.29
-- nvm use 0.10.29
 
