--- a/.drone.yml
+++ b/.drone.yml
@@ -10,15 +10,9 @@ notify:
     webhook_url: $$slack_webhook
 publish:
   npm:
-    email: $$npm_drone_email
-    password: $$npm_drone_password
-    username: $$npm_drone_username
+    token: $$npm_token
     when:
       branch: master
 script:
-- npm config set ca ""
 - npm install
 - make test
-- nvm install 6
-- nvm use 6
-
