--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "clever team <tech-notify@clever.com>",
   "description": "process-metrics",
   "dependencies": {
-    "kayvee": "^1.0.3",
-    "underscore": "~1.4.4"
+    "kayvee": "^3.2.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.32",
