--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^5.0.1",
     "eslint-plugin-react": "^3.16.1",
-    "mocha": "~1.6.0",
+    "mocha": "^2.5.3",
     "ts-node": "^3.1.0",
     "typescript": "^2.0.6"
   },
