--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "0.4.3",
   "engines": {
-    "node": ">=0.10.x"
+    "node": ">=12"
   },
   "scripts": {
     "prepublish": "make build"
