--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "node": ">=12"
   },
   "scripts": {
-    "prepublish": "make build"
+    "prepare": "make build",
+    "test": "NODE_ENV=test node_modules/mocha/bin/mocha --compilers ts:ts-node/register --reporter spec --ignore-leaks --bail --timeout 180000 test/*"
   },
   "author": "Clever Team <tech-notify@clever.com>",
   "description": "process-metrics",
