test: Fix test harness to run on updated mocha version
- We can just call `mocha` instead of `node_modules/...`.
- --compilers was changed to --require.
- Dropped the other flags (did not seem to make a difference).
- Added --exit to successfully exit after finishing the one test in this repo.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "prepare": "make build",
-    "test": "NODE_ENV=test node_modules/mocha/bin/mocha --compilers ts:ts-node/register --reporter spec --ignore-leaks --bail --timeout 180000 test/*"
+    "test": "mocha --require ts-node/register --exit test/*"
   },
   "author": "Clever Team <tech-notify@clever.com>",
   "description": "process-metrics",
