--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "ts-node": "^3.1.0",
     "typescript": "^3"
   },
-  "name": "process-metrics"
+  "name": "process-metrics",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Clever/node-process-metrics.git"
+  },
+  "license": "Apache-2.0"
 }
