--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ jobs:
         name: Set up CircleCI artifacts directories
     - run:
         command: npm install
-        name: npm install
-    - run: npm install
+        name: npm ci
     - run: make build
     - run: make test
     - run: if [ "${CIRCLE_BRANCH}" == "master" ]; then $HOME/ci-scripts/circleci/npm-publish $NPM_TOKEN .; fi;
